# gum-lang

./: .gitattributes  .gitignore  README.md  SPEC.md  STORAGE.md  test_code_len.gum  test_overload.gum  test_zero.gum
gumc/: Cargo.toml
gumc/src/: indent.rs  main.rs  runner.rs  stdlib.rs
gumc/src/ast/: mod.rs
gumc/src/codegen/: abi.rs  layout.rs  mod.rs  mutability.rs  tr_binop.rs  tr_codec.rs  tr_extcall.rs  tr_field.rs  tr_methodcall.rs  tr_storage.rs  translator.rs  yul.rs
gumc/src/lexer/: mod.rs
gumc/src/parser/: gum.pest  mod.rs
gumc/src/semantic/: mod.rs
gumc/tests/: compile_tests.rs  execution_tests.rs
gumc/tests/fixtures/: gum_abi_mix.gum  gum_arr_copy.gum  gum_dyn_struct.gum  gum_dyn_struct_iface.gum  gum_enum_abi.gum  gum_guarded_returning.gum  gum_inherit.gum  gum_map_dyn_arr.gum  gum_msg_block.gum  gum_new_arr.gum  gum_new_contract.gum  gum_new_dyn.gum  gum_no_receive.gum  gum_pack.gum  gum_payable.gum  gum_receive.gum  gum_signed_containers.gum  gum_sstr.gum  gum_starr_abi.gum  gum_storage_vec.gum  gum_store_constructor.gum  gum_string_echo.gum  gum_struct_arr.gum  gum_struct_deploy.gum  gum_transient.gum  gum_try_internal_return.gum  gum_try_local.gum  gum_view.gum  lock_v2.gum  sol_abi_mix.sol  sol_arith_literal_pos.sol  sol_attacker.sol  sol_bubble_caller.sol  sol_crypto.sol  sol_dyn_array.sol  sol_dyn_struct.sol  sol_enum_abi.sol  sol_enum_struct.sol  sol_map_cse.sol  sol_map_dyn_arr.sol  (+11 more)
gumc/tests/fixtures/abi/: array.gum  array.sol  dyn_struct.gum  dyn_struct_iface.gum  dyn_struct_iface.sol  fixed_array.gum  fixed_array.sol  prober.sol  (+10 more)
(+80 files in other folders)
