[package]
name = "gumc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = "4.6.1"
logos = "0.16.1"
pest = "2.8.7"
pest_derive = "2.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
revm = "41"
hex = "0.4"

[dev-dependencies]
revm = "41"
hex = "0.4"
p256 = { version = "0.13", features = ["ecdsa"] }
